Implement the simplest localisation method.

--- a/pages/documentation/using-mdx.mdx
+++ b/pages/documentation/using-mdx.mdx
@@ -21,9 +21,9 @@ Here is a small demo video for curious:
   width='100%'
   height='400'
   src='https://www.youtube-nocookie.com/embed/d2sQiI5NFAM'
-  frameborder='0'
+  frameBorder='0'
   allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 ## Basic Usage Example
