Add deploy on Vercel button

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,6 +21,16 @@ Main reasons to try **NextBook** on your next project are:
 - Unlimited dynamic features can be added with [MDX](https://mdxjs.com/)
 - Very customisable and extensible
 
+## Get Started
+
+<a
+  href='https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2Famiroff%2FNextBook'
+  target='_blank'
+  rel='noopener'
+>
+  <img src='https://vercel.com/button' alt='Deploy with Vercel' className='raw' />
+</a>
+
 ## Learn More
 
 Here is some more information if case you are interested.
