--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,10 +10,10 @@ NextBook is quick and easy way to buid technical books or documentation that sup
 
 ## Primary Features
 
-Main reasons to try **NextBook** on your next project are:
+Main reasons to try **NextBook** on your next documentation project are:
 
 - Great out of the box UI with [HalfMoon](https://www.gethalfmoon.com/)
-- Good enought functionality and blazing speed with [Next.js](https://nextjs.org/)
+- Good enough functionality and blazing speed with [Next.js](https://nextjs.org/)
 - Easy content creation (plain [markdown](https://www.markdownguide.org/)) and collaboration ([Git](https://github.com/))
 - You own your data
 - Fast to get started, just clone the repo and modify to your liking.
