--- a/pages/documentation/using-mdx.mdx
+++ b/pages/documentation/using-mdx.mdx
@@ -61,6 +61,6 @@ import Counter from '../../components/counter'
 
 Voila! This way you can create dynamic components for your documentation like never before. Live code editors, quizes, exams, cheatsheets, comments, you name it. Possibilities are endless.
 
-## More MDX Wizardy
+## More MDX Wizardry
 
-For more information what can be achieved with MDX, see the official [site]([original site](https://mdxjs.com/)).
+For more information what can be achieved with MDX, see the official [site](https://mdxjs.com/).
