--- a/pages/documentation/using-mdx.mdx
+++ b/pages/documentation/using-mdx.mdx
@@ -47,7 +47,7 @@ export default function Counter() {
 
 We then include it in our `.mdx` file and display it just like in React application:
 
-```markdown title=pages/docs/mypage.mdx
+```jsx title=pages/docs/mypage.mdx
 import Counter from '../../components/counter'
 
 <Counter />
