NextBook is now print-friendly

--- a/template/pages/examples.mdx
+++ b/template/pages/examples.mdx
@@ -481,11 +481,15 @@ While [markdown spec](https://commonmark.org) does not offer any tabbed interfac
 ::: tabs
   ::: tab Windows Directions
 
-  Install via [chocolatey](https://chocolatey.org):
+  ** Windows Directions **
 
+  Install via [chocolatey](https://chocolatey.org):
+  
   `choco install python`
   :::
   ::: tab macOS Directions
+
+  ** macOS Directions **
 
   Install via [brew](https://brew.sh):
 
@@ -493,6 +497,8 @@ While [markdown spec](https://commonmark.org) does not offer any tabbed interfac
   :::
 
   ::: tab Linux Directions
+
+  ** Linux Directions **
 
   Install via apt:
 
@@ -505,11 +511,15 @@ results in:
 ::: tabs
   ::: tab Windows Directions
 
-  Install via [chocolatey](https://chocolatey.org):
+  ** Windows Directions **
 
+  Install via [chocolatey](https://chocolatey.org):
+  
   `choco install python`
   :::
   ::: tab macOS Directions
+
+  ** macOS Directions **
 
   Install via [brew](https://brew.sh):
 
@@ -517,6 +527,8 @@ results in:
   :::
 
   ::: tab Linux Directions
+
+  ** Linux Directions **
 
   Install via apt:
 
