--- a/template/pages/examples.mdx
+++ b/template/pages/examples.mdx
@@ -16,7 +16,7 @@ YAML front matter can be used to add title, description, part info, tags and upd
 layout: index
 part: Documentation
 title: Markdown Usage
-description: While this is not a complete markdown referece, here are markdown features that you can use right away in your books.
+description: While this is not a complete markdown reference, here are markdown features that you can use right away in your books.
 tags: [markdown, reference, NextBook, md]
 updated: 2021-3-14
 ---
