--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,4 +7,4 @@ import Readme from '../README.md'
 <Readme />
 
 !> Use Right Tool For The Job
-NextBook is not geared towards API documentation, rather it is optimised for tutorial/book style documentation. For API docs [ReadTheDocs](https://readthedocs.org/), [Docusaurus](https://docusaurus.io/) or plain [Spinx](https://www.sphinx-doc.org/en/master/usage/restructuredtext/basics.html) would be a better fit.
+NextBook is not geared towards API documentation, rather it is optimised for tutorial/book style documentation. For API docs [ReadTheDocs](https://readthedocs.org/), [Docusaurus](https://docusaurus.io/) or plain [Sphinx](https://www.sphinx-doc.org/en/master/usage/restructuredtext/basics.html) would be a better fit.
