--- a/book/fencedcode.mdx
+++ b/book/fencedcode.mdx
@@ -1,13 +1,7 @@
 ---
-layout: index
-part: Part 1
-title: Fenced Code Examples
-description: This page has some quick examples to get you up and running quickly.
-tags: [markdown, reference, NextBook]
-updated: 2021-3-21
+part: Documentation
+title: Fenced Code Block Usage
 ---
-
-## Fenced Code
 
 Oftentimes, you need to display a code example on the page. This example could be as simple as a one-liner or as complex as a diff view. Below are the ways you can use fenced code blocks with NextBook.
 
@@ -15,12 +9,12 @@ Oftentimes, you need to display a code example on the page. This example could b
 
 Wrap your code using triple \``` characters for the simplest code formatting.
 
-````
+~~~
 ```
 Everything within fenced code will
 be displayed in monospace font.
 ```
-````
+~~~
 
 results in:
 
@@ -33,11 +27,11 @@ be displayed in monospace font.
 
 ### Theme-Aware Highlighting
 
-You can add syntax highlighting by specifying code's [language](https://prismjs.com/index.html#supported-languages) after triple ```. NextBook uses [PrismJS](https://github.com/PrismJS) for themes and language definitions as it is currently the most complete one.
+You can add syntax highlighting by specifying code's [language](https://prismjs.com/index.html#supported-languages) after triple ```. NextBook uses [PrismJS](https://github.com/PrismJS) for themes and language definitions as it is currently the most complete one. 
 
 When application's theme changes, so does the fenced code theme. Try it now by pressing <kbd>T</kbd>.
 
-````
+~~~
 ```jsx
 import React, { useState } from 'react'
 
@@ -51,7 +45,7 @@ function Square(props) {
   )
 }
 ```
-````
+~~~
 
 results in:
 
@@ -62,7 +56,7 @@ function Square(props) {
   const [value, setValue] = useState(null)
 
   return (
-    <button className='square' onClick={() => alert('click')}>
+    <button className="square" onClick={() => alert('click')}>
       {props.value}
     </button>
   )
@@ -73,7 +67,7 @@ function Square(props) {
 
 You can force dark syntax highlighting even on light theme. Provide `dark` parameter to do that. Swith to light theme by pressing <kbd>T</kbd>. to see code block below still using dark theme.
 
-````
+~~~
 ```jsx dark
 import React, { useState } from 'react'
 
@@ -87,7 +81,7 @@ function Square(props) {
   )
 }
 ```
-````
+~~~
 
 results in:
 
@@ -98,7 +92,7 @@ function Square(props) {
   const [value, setValue] = useState(null)
 
   return (
-    <button className='square' onClick={() => alert('click')}>
+    <button className="square" onClick={() => alert('click')}>
       {props.value}
     </button>
   )
@@ -111,13 +105,13 @@ Any code block will have automatic `Copy` icon clicking which copies contents of
 
 ## Code Header Information
 
-You can display various information like title and link to source in code header.
+You can display various information like title and link to source in code header. 
 
 ### Code Title
 
 Often you need to tell which file you are talking about. You can specify this by adding `title` info:
 
-````
+~~~
 ```jsx title=app.jsx
 import React, { useState } from 'react'
 
@@ -131,7 +125,7 @@ function Square(props) {
   )
 }
 ```
-````
+~~~
 
 results in:
 
@@ -142,7 +136,7 @@ function Square(props) {
   const [value, setValue] = useState(null)
 
   return (
-    <button className='square' onClick={() => alert('click')}>
+    <button className="square" onClick={() => alert('click')}>
       {props.value}
     </button>
   )
@@ -153,7 +147,7 @@ function Square(props) {
 
 In case you need to link to original source you can pass `link` metadata. Now, title will be a link to the specified URL.
 
-````
+~~~
 ```python title=Colors/primary_colors.py link=https://github.com/geekcomputers/Python/blob/master/Colors/primary_colors.py
 def diff(a, b):
     """
@@ -161,7 +155,7 @@ def diff(a, b):
     """
     return a - b
 ```
-````
+~~~
 
 results in:
 
@@ -179,7 +173,7 @@ def diff(a, b):
 
 Lines of code can have automatic numbering. Provide `numbered` metadata to achive that:
 
-````
+~~~
 ```html numbered
 <!DOCTYPE html>
 <html lang='en'>
@@ -194,22 +188,22 @@ Lines of code can have automatic numbering. Provide `numbered` metadata to achiv
 </body>
 </html>
 ```
-````
+~~~
 
 results in:
 
 ```html numbered
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang='en'>
+<head>
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Hello World!</h1>
-  </body>
+</body>
 </html>
 ```
 
@@ -217,7 +211,7 @@ results in:
 
 Code can start from any provided number. Use `numbered` together with `startline` metadata to achive that. Default startline is `1` unless provided.
 
-````
+~~~
 ```html numbered startline=3
 <head>
     <meta charset='UTF-8'>
@@ -226,16 +220,16 @@ Code can start from any provided number. Use `numbered` together with `startline
     <title>Document</title>
 </head>
 ```
-````
+~~~
 
 results in:
 
 ```html numbered startline=3
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <title>Document</title>
 </head>
 ```
 
@@ -243,7 +237,7 @@ results in:
 
 In some cases there's a need to highlight/mark some lines and then describe each line seperately. Any number of lines can be marked by providing `marked` parameter:
 
-````
+~~~
 ```html marked=2,5,6,10
 <!DOCTYPE html>
 <html lang='en'>
@@ -258,22 +252,22 @@ In some cases there's a need to highlight/mark some lines and then describe each
 </body>
 </html>
 ```
-````
+~~~
 
 results in:
 
 ```html marked=2,5,6,10
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang='en'>
+<head>
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Hello World!</h1>
-  </body>
+</body>
 </html>
 ```
 
@@ -281,7 +275,7 @@ results in:
 
 Sometimes you want to show which lines were added or removed from code. This can be achieved by passing related line numbers as `added` and `removed` parameters. Added lines will be highlighted with light green, removed lines with light red color. Note that displaying numbers, although works, in this case would cause a confusion as line numbers do not repeat.
 
-````
+~~~
 ```html removed=2,8 added=3,9,10
 <!DOCTYPE html>
 <html lang='en'>
@@ -296,30 +290,29 @@ Sometimes you want to show which lines were added or removed from code. This can
 </body>
 </html>
 ```
-````
+~~~
 
 results in:
 
 ```html removed=2,8 added=3,9,10
 <!DOCTYPE html>
-<html lang="en">
-  <html lang="ja">
-    <head>
-      ...
-    </head>
-    <body>
-      <h1>Hello World!</h1>
-      <h1>こんにちは世界!</h1>
-      <p>今日は天気がいいですね。</p>
-    </body>
-  </html>
+<html lang='en'>
+<html lang='ja'>
+<head>
+...
+</head>
+<body>
+    <h1>Hello World!</h1>
+    <h1>こんにちは世界!</h1>
+    <p>今日は天気がいいですね。</p>
+</body>
 </html>
 ```
 
 You can also pass every other parameter mentioned above together. Here we are adding some of them:
 
-````
-```html numbered marked=2,5,6,10 title=public/index.html link=https://gist.github.com/amiroff/04d57ef025845b191d9cd30c7ca13f20
+~~~
+```html numbered marked=2,5,6,10 title=public/index.html link=https://gist.github.com/amiroff/04d57ef025845b191d9cd30c7ca13f20 
 <!DOCTYPE html>
 <html lang='en'>
 <head>
@@ -333,39 +326,38 @@ You can also pass every other parameter mentioned above together. Here we are ad
 </body>
 </html>
 ```
-````
+~~~
+results in 
 
-results in
-
-```html numbered marked=2,5,6,10 title=public/index.html link=https://gist.github.com/amiroff/04d57ef025845b191d9cd30c7ca13f20
+```html numbered marked=2,5,6,10 title=public/index.html link=https://gist.github.com/amiroff/04d57ef025845b191d9cd30c7ca13f20 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang='en'>
+<head>
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Hello World!</h1>
-  </body>
+</body>
 </html>
 ```
 
 ## Including External Code File
 
+todo
+
 Sometimes code to display is so big that it's inconvenient to embed it in markdown document. For cases like this, including original file with `file` is possible. Provided path should be relative to current document.
 
-````
+~~~
 ```json file=../public/manifest.json
 ```
-````
+~~~
 
 results in:
 
-```json file=../public/manifest.json
 
-```
 
 ## Escaping Code Blocks
 
@@ -383,16 +375,15 @@ To escape (prevent from displaying as highlighted code) block and simply display
     <title>Document</title>
 </head>
 <body>
-
+    
 </body>
 </html>
 ```
 ~~~
 ````
-
 will result in:
 
-````
+~~~
 ```html
 <!DOCTYPE html>
 <html lang='en'>
@@ -403,8 +394,8 @@ will result in:
     <title>Document</title>
 </head>
 <body>
-
+    
 </body>
 </html>
 ```
-````
+~~~
