--- a/book/using-mdx.mdx
+++ b/book/using-mdx.mdx
@@ -47,17 +47,7 @@ export default function Counter() {
 
 We then include it in our `.mdx` file and display it just like in React application:
 
-```jsx title=pages/documentation/mypage.mdx
-import Counter from 'components/example-counter'
-
-<Counter />
-```
-
-will result in:
-
-import Counter from 'components/example-counter'
-
-<Counter />
+#todo
 
 Voila! This way you can create dynamic components for your documentation like never before. Live code editors, quizes, exams, cheatsheets, comments, you name it. Possibilities are endless.
 
