--- a/book/welcome.mdx
+++ b/book/welcome.mdx
@@ -1,27 +1,30 @@
 ---
-layout: empty
+title: Welcome to NextBook!
 ---
+
+![](https://next-book.vercel.app/screenshot.png)
 
 **NextBook** is quick and easy way to buid technical books or documentation that support modern standards and run blazingly fast. It works by compiling markdown or MDX to static pages. This way, first content render on user's device is near instant.
 
-NextBook makes writing technical docs stupid simple while keeping featureset minimal:
+NextBook makes writing technical docs stupid simple while keeping featureset minimal.
 
-## Your Next Steps
+## Getting Started
 
-1. Change to your project directory (where this file resides).
+1. Bootstrap a project with `npx create-next-app my-awesome-book -e https://github.com/amiroff/NextBook/tree/master/template`
 2. Run `npm run dev` and open [http://localhost:3000/](http://localhost:3000/)
 3. Check examples to see what's possible with NextBook.
-4. Customize content in `pages` and `config.json` to your heart.
+4. Create your [markdown](/documentation/markdown) or [MDX](/documentation/using-mdx) content in `pages` folder.
+5. Update `config/config.json` with your table of contents and other information.
 6. Build (`npm run build`) and [deploy](https://vercel.com/new) your repository to any static hosting provider like Vercel, Netlify, Github Pages or Google Cloud.
 7. Profit! 🎉
 
-This should be enough to have a statically generated documentation page or book.
+This should be enough to have a statically generated documentation page / book.
 
 With the advantages of [Next.js](https://nextjs.com), anything fancy (grading, level switching, you name it..) can be added along the way.
 
 ## Primary Features 🧿
 
-- 💅 Good looking, simple and readable UI including `dark` mode, `fluid` and `centered` layouts, 
+- 💅 Good looking, simple and readable UI including `dark` mode, `fluid` and `centered` layouts,
 - 🌎 Great SEO out of the box,
 - 📱 Mobile & printer friendly,
 - 🚀 Single page application with pre-fetching,
@@ -37,3 +40,5 @@ With the advantages of [Next.js](https://nextjs.com), anything fancy (grading, l
 - ⚙︎ Customisable, extensible and simple codebase,
 - ❤ Built on open-source,
 - 👍 And many more small details...
+
+!> Use Right Tool For The Job NextBook is not geared towards API documentation, rather it is optimised for tutorial/book style documentation. For API docs [ReadTheDocs](https://readthedocs.org/), [Docusaurus](https://docusaurus.io/) or plain [Sphinx](https://www.sphinx-doc.org/en/master/usage/restructuredtext/basics.html) would be a better fit.
