--- a/book/welcome.mdx
+++ b/book/welcome.mdx
@@ -41,4 +41,5 @@ With the advantages of [Next.js](https://nextjs.com), anything fancy (grading, l
 - ❤ Built on open-source,
 - 👍 And many more small details...
 
-!> Use Right Tool For The Job NextBook is not geared towards API documentation, rather it is optimised for tutorial/book style documentation. For API docs [ReadTheDocs](https://readthedocs.org/), [Docusaurus](https://docusaurus.io/) or plain [Sphinx](https://www.sphinx-doc.org/en/master/usage/restructuredtext/basics.html) would be a better fit.
+!> Use Right Tool For The Job 
+NextBook is not geared towards API documentation, rather it is optimised for tutorial/book style documentation. For API docs [ReadTheDocs](https://readthedocs.org/), [Docusaurus](https://docusaurus.io/) or plain [Sphinx](https://www.sphinx-doc.org/en/master/usage/restructuredtext/basics.html) would be a better fit.
