Sidebar & Navbar improvements

--- a/content/nextbook/in-progress-features.mdx
+++ b/content/nextbook/in-progress-features.mdx
@@ -19,8 +19,8 @@ Here is a list of features which are planned to be implemented in future in no p
 - [x] Fenced code diff support.
 - [x] NPX template support.
 - [x] Print styles.
-- [ ] Migrate to Next MDX Remote
-- [ ] Migrate to pure CSS or Tailwind
+- [x] Migrate to Next MDX Remote
+- [x] Migrate to pure CSS or Tailwind
 - [ ] Add multiple books support
 - [ ] Global search. (Algolia?)
 - [ ] Live code edit & preview support.
