--- a/content/nextbook/nextbook-features.mdx
+++ b/content/nextbook/nextbook-features.mdx
@@ -7,7 +7,7 @@ title: NextBook Features
 
 - Fast and responsive UI, content should be readable and accessible on most devices.
 - Looks good even on printouts.
-- Good out of the box looks thanks to [Halfmoon](https://www.gethalfmoon.com/).
+- Good out of the box looks thanks to [tailwindcss](https://tailwindcss.com/).
 - Keyboard shortcuts to toggle features (sidebar, lights off, next/previous page navigation).
 - Built-in light and dark mode (press <kbd>T</kbd>) for pleasant and safe reading.
 - Smooth progressbar on top indicating how far on the page you are.
