--- a/content/reference/using-mdx.mdx
+++ b/content/reference/using-mdx.mdx
@@ -70,16 +70,12 @@ Voila! This way you can create dynamic components for your documentation like ne
 You can also use any components from [MDX-Embed](https://mdx-embed.com/) to embed content from other sites like YouTube, Twitter, Codepen, etc. For example, to embed a YouTube video, you can use the following syntax:
 
 ```markdown
-### Example YouTube Video
-
-<YouTube id='dQw4w9WgXcQ' />
+<YouTube youTubeId='dQw4w9WgXcQ' />
 ```
 
 becomes:
 
-### Example YouTube Video
-
-<YouTube id='dQw4w9WgXcQ' />
+<YouTube youTubeId='dQw4w9WgXcQ' />
 
 ## More MDX Wizardry
 
